--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 crossbeam = "0.8"
 anyhow = "1.0"
 memmap2 = "0.5"
+tokio = { version = "1.20", features = ["sync"] }
+
+[dev-dependencies]
+rand = "0.8"
+tokio = { version = "1.20", features = ["full"] }
