--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ tokio = { version = "1.20", features = ["sync"] }
 [dev-dependencies]
 rand = "0.8"
 tokio = { version = "1.20", features = ["full"] }
+futures = "0.3"
+bytesize = "1.1"
