--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crossbeam = "0.8"
 anyhow = "1.0"
 memmap2 = "0.5"
 tokio = { version = "1.20", features = ["sync"] }
+libc = "0.2"
 
 [dev-dependencies]
 rand = "0.8"
