--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ rand = "0.8"
 tokio = { version = "1.20", features = ["full"] }
 futures = "0.3"
 bytesize = "1.1"
+pprof = { version = "0.10", features = ["flamegraph"] }
