--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0"
 tokio = { version = "1.20", features = ["sync"] }
 libc = "0.2"
+bytes = "1.2"
 
 [dev-dependencies]
 rand = "0.8"
