--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ tokio = { version = "1.20", features = ["full"] }
 futures = "0.3"
 bytesize = "1.1"
 pprof = { version = "0.10", features = ["flamegraph"] }
+num_cpus = "1.13"
