--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1.20", features = ["sync"] }
 libc = "0.2"
 bytes = "1.2"
 
+# Dependencies for test
 [dev-dependencies]
 rand = "0.8"
 tokio = { version = "1.20", features = ["full"] }
